(chore): refactor video player to support better autoplaying in scroll

--- a/src/app/modules/comments/list/list.component.scss
+++ b/src/app/modules/comments/list/list.component.scss
@@ -413,6 +413,9 @@ m-comments__entityOutlet,
         max-height: $mcc-height - ($minds-padding * 2) - 50px;
       }
     }
+    .m-comment-attachment .image-video {
+      height: $mcc-height;
+    }
   }
 }
 
