--- a/src/app/modules/newsfeed/feed-grid/feed-grid.component.html
+++ b/src/app/modules/newsfeed/feed-grid/feed-grid.component.html
@@ -5,7 +5,8 @@
     [displayOptions]="{
       showComments: true,
       showOnlyCommentsInput: true,
-      v2: true
+      v2: true,
+      autoplayVideo: false
     }"
     (deleted)="delete($event)"
     [slot]="i"
