--- a/src/app/modules/pro/channel/tiles/media/tile.component.html
+++ b/src/app/modules/pro/channel/tiles/media/tile.component.html
@@ -3,6 +3,7 @@
   [displayOptions]="{
     fixedHeight: false,
     showComments: true,
-    showOwnerBlock: true
+    showOwnerBlock: true,
+    autoplayVideo: false
   }"
 ></m-activity>
