--- a/src/app/modules/media/components/video-player/player.component.html
+++ b/src/app/modules/media/components/video-player/player.component.html
@@ -16,13 +16,12 @@
       style="display: block; width: 100%; height: 100%;"
       [plyrPoster]="service.poster$ | async"
       [plyrPlaysInline]="true"
-      [plyrSources]="useEmptySource ? emptySource : (sources$ | async)"
+      [plyrSources]="!service.playable ? emptySource : (sources$ | async)"
       [plyrOptions]="options"
       (plyrPlay)="onPlayed($event)"
       (plyrEnterFullScreen)="fullScreenChange.next($event)"
       (plyrExitFullScreen)="fullScreenChange.next($event)"
       (plyrLoadedMetadata)="emitDimensions($event)"
-      (click)="onClick()"
       (plyrPlaying)="onPlay()"
       (plyrReady)="onReady()"
       (plyrVolumeChange)="onVolumeChange()"
