(feat): Shop memberships header

--- a/src/app/common/components/toggle/toggle.component.scss
+++ b/src/app/common/components/toggle/toggle.component.scss
@@ -5,6 +5,7 @@ m-toggle {
   height: 19px;
   margin: 0 0.35em;
   cursor: pointer;
+  user-select: none;
 
   &.disabled {
     .m-toggle__switch {
