--- a/src/app/modules/channels/v2/shop/shop.component.html
+++ b/src/app/modules/channels/v2/shop/shop.component.html
@@ -1,5 +1,3 @@
-<div class="m-pageLayout__container m-channel__shop">
-  <div class="m-channelFeed__list" m-pageLayout__pane="main">
-    <m-channelShop__memberships></m-channelShop__memberships>
-  </div>
+<div class="m-channel__shop">
+  <m-channelShop__memberships></m-channelShop__memberships>
 </div>
