--- a/src/app/modules/channels/v2/shop/memberships/memberships.component.html
+++ b/src/app/modules/channels/v2/shop/memberships/memberships.component.html
@@ -6,16 +6,22 @@
       <ng-container
         *ngIf="channel.isOwner$ | async; else consumerTitleHeadline"
       >
-        <div>
+        <div
+          class="m-channelShopMembershipsTitle__headline m-channelShopMembershipsTitle__headline--small"
+          ngPreserveWhitespaces
+        >
           <a i18n="@@CHANNELS_SHOP_MEMBERSHIPS_PUBLISH_TIERS">Publish Tiers</a>
-          <ng-container i18n="@@CHANNELS_SHOP_MEMBERSHIPS_PUBLISH_TIERS_DRAFT"
-            >(Draft)</ng-container
+          <span i18n="@@CHANNELS_SHOP_MEMBERSHIPS_PUBLISH_TIERS_DRAFT"
+            >(Draft)</span
           >
         </div>
       </ng-container>
 
       <ng-template #consumerTitleHeadline>
-        <div>
+        <div
+          class="m-channelShopMembershipsTitle__headline"
+          ngPreserveWhitespaces
+        >
           &mdash;
           <ng-container i18n="@@CHANNELS_SHOP_MEMBERSHIPS_TITLE_HEADLINE"
             >Access exclusive content through a monthly
@@ -26,18 +32,18 @@
     </div>
 
     <ng-container *ngIf="channel.isOwner$ | async; else consumerHeader">
-      <div class="m-channelShopMemberships__newSupportTier">
-        <a>
-          <m-icon iconId="add"></m-icon>
-          <ng-container i18n="@@CHANNELS_SHOP_MEMBERSHIPS_NEW_TIER"
-            >Create New</ng-container
-          >
-        </a>
-      </div>
+      <a
+        class="m-channelShopMemberships__headerAction m-channelShopMemberships__headerAction--small"
+      >
+        <m-icon iconId="add" [sizeFactor]="0"></m-icon>
+        <ng-container i18n="@@CHANNELS_SHOP_MEMBERSHIPS_NEW_TIER"
+          >Create New</ng-container
+        >
+      </a>
     </ng-container>
 
     <ng-template #consumerHeader>
-      <div class="m-channelShopMemberships__currencyToggle">
+      <div class="m-channelShopMemberships__headerAction">
         <span i18n="@@COMMON_USD">USD</span>
         <span
           ><m-toggle
@@ -54,7 +60,7 @@
 
   <div class="m-channelShopMemberships__supportTiers">
     <m-channelShopMemberships__supportTier
-      *ngFor="let supportTier of supportTiers.list$ | async"
+      *ngFor="let supportTier of supportTiers$ | async"
       class="m-channelShopMemberships__supportTier"
       [supportTier]="supportTier"
       [isOwner]="channel.isOwner$ | async"
