--- a/src/app/modules/wallet/v2/btc/settings/settings-btc.component.html
+++ b/src/app/modules/wallet/v2/btc/settings/settings-btc.component.html
@@ -7,12 +7,12 @@
   <!-- -------------------------------------------- -->
 
   <div *ngIf="!currentAddress && !showForm">
-    <h2 18n="@@WALLET_V2__SETTINGS_BTC__SETUP_YOUR_ADDRESS">
+    <h2 i18n="@@WALLET_V2__SETTINGS_BTC__SETUP_YOUR_ADDRESS">
       Setup your Bitcoin Address
     </h2>
     <p
       class="m-walletSecondaryText--desc"
-      18n="@@WALLET_V2__SETTINGS_BTC__YOU_CAN_RECEIVE_BY_INFO"
+      i18n="@@WALLET_V2__SETTINGS_BTC__YOU_CAN_RECEIVE_BY_INFO"
     >
       You can receive Bitcoin payments by linking your Bitcoin receiver address
       below.
@@ -27,12 +27,12 @@
   <!-- -------------------------------------------- -->
 
   <div *ngIf="showForm">
-    <h2 18n="@@WALLET_V2__SETTINGS_BTC__UPDATED_BITCOIN_ADDRESS">
+    <h2 i18n="@@WALLET_V2__SETTINGS_BTC__UPDATED_BITCOIN_ADDRESS">
       Update Bitcoin Address
     </h2>
     <p
       class="m-walletSecondaryText--desc"
-      18n="@@WALLET_V2__SETTINGS_BTC__NOTE_ROTATE_FREQUENTLY_INFO"
+      i18n="@@WALLET_V2__SETTINGS_BTC__NOTE_ROTATE_FREQUENTLY_INFO"
     >
       Note: You may want to rotate this address frequently to avoid third party
       tracking.
