(fix): chat layout fixes

--- a/src/app/modules/groups/v2/profile/profile.component.scss
+++ b/src/app/modules/groups/v2/profile/profile.component.scss
@@ -107,6 +107,10 @@ m-groupProfile {
         width: 100%;
       }
 
+      m-group__chat {
+        width: 100%;
+      }
+
       @media screen and(min-width: $m-grid-max-mobile) {
         margin: 34px 40px 0;
       }
