--- a/src/app/common/components/carousel/carousel.component.scss
+++ b/src/app/common/components/carousel/carousel.component.scss
@@ -10,6 +10,17 @@
     scrollbar-width: none;
     position: relative;
 
+    div + div {
+      padding-left: 20px;
+    }
+
+    &:first-child {
+      padding-left: 40px;
+      @media screen and (max-width: $min-tablet) {
+        padding-left: 20px;
+      }
+    }
+
     &::-webkit-scrollbar {
       display: none;
     }
@@ -18,6 +29,7 @@
   .m-carousel__previousButton {
     position: absolute;
     z-index: 1000000; /* unfortunately necessary */
+    cursor: pointer;
     border-radius: 50%;
     padding: 0;
     height: 30px;
@@ -37,6 +49,7 @@
   .m-carousel__nextButton {
     position: absolute;
     z-index: 1;
+    cursor: pointer;
     border-radius: 50%;
     padding: 0;
     height: 30px;
