--- a/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.html
+++ b/src/app/modules/wire/v2/creator/marketing-block/marketing-block.component.html
@@ -38,7 +38,7 @@
       >
     </div>
     <div class="m-wireCreatorMarketingBlock__learnMore">
-      <a>
+      <a [routerLink]="['/', this.upgradeType]">
         <span i18n="@@WIRE_CREATOR_MARKETING__LEARN_MORE"
           >Learn More about Minds<ng-container *ngIf="isPlus">+</ng-container>
           <ng-container *ngIf="isPro"> Pro</ng-container>
