--- a/src/app/modules/wire/v2/creator/form/form.component.scss
+++ b/src/app/modules/wire/v2/creator/form/form.component.scss
@@ -161,7 +161,7 @@
       color: themed($m-textColor--primary);
     }
     @media screen and (max-width: $max-mobile) {
-      flex-direction: column;
+      font-size: 17px;
     }
     .m-wireCreatorForm__intervalOption {
       flex-grow: 1;
@@ -181,8 +181,7 @@
       &:first-child {
         margin-right: 30px;
         @media screen and (max-width: $max-mobile) {
-          margin-right: 0;
-          margin-bottom: 15px;
+          margin-right: 20px;
         }
       }
       > div:first-child {
