--- a/src/app/modules/newsfeed/activity/nsfw-consent/nsfw-consent.component.html
+++ b/src/app/modules/newsfeed/activity/nsfw-consent/nsfw-consent.component.html
@@ -1,6 +1,7 @@
 <div class="m-activityContent__fixedHeightSpacer"></div>
 
 <div class="m-activityNsfwConsent__container">
+  <m-paywallBadge [entity]="entity"></m-paywallBadge>
   <i class="material-icons m-activityNsfwConsent__icon">lock</i>
 
   <h2 class="m-activityNsfwConsent__title">NSFW</h2>
