--- a/src/app/modules/newsfeed/activity/activity.component.html
+++ b/src/app/modules/newsfeed/activity/activity.component.html
@@ -19,17 +19,22 @@
       ></m-activity__menu>
     </ng-container>
   </m-activity__ownerBlock>
-
   <m-activity__content
     *ngIf="service.shouldShowContent$ | async"
+    [showPaywall]="service.shouldShowPaywall$ | async"
+    [showPaywallBadge]="service.shouldShowPaywallBadge$ | async"
   ></m-activity__content>
-
-  <m-activity__nsfwConsent *ngIf="service.shouldShowNsfwConsent$ | async">
+  <ng-container *mIfFeature="'!paywall-2020'">
+    <m-activity__paywall
+      [ngClass]="{ isPaywall2020: isPaywall2020 }"
+      *ngIf="service.shouldShowPaywall$ | async"
+    ></m-activity__paywall
+  ></ng-container>
+  <m-activity__nsfwConsent
+    *ngIf="service.shouldShowNsfwConsent$ | async"
+    [showPaywallBadge]="service.shouldShowPaywallBadge$ | async"
+  >
   </m-activity__nsfwConsent>
-
-  <m-activity__paywall
-    *ngIf="service.shouldShowPaywall$ | async"
-  ></m-activity__paywall>
 
   <m-activity__toolbar
     *ngIf="service.displayOptions.showToolbar"
