--- a/src/app/modules/newsfeed/activity/nsfw-consent/nsfw-consent.component.scss
+++ b/src/app/modules/newsfeed/activity/nsfw-consent/nsfw-consent.component.scss
@@ -1,6 +1,7 @@
 m-activity__nsfwConsent {
   display: block;
   width: 100%;
+  position: relative;
 
   text-align: center;
 
@@ -34,16 +35,22 @@ m-activity__nsfwConsent {
   }
 
   .m-activityNsfwConsent__button {
-    margin: 38px 0;
-    padding: $minds-padding;
+    margin: 38px 0 50px 0;
+    padding: 12px 16px;
     font-size: 16px;
     border-radius: $m-borderRadius;
     cursor: pointer;
+    transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
 
     @include m-theme() {
       background-color: themed($m-bgColor--primary);
       color: themed($m-textColor--primary);
-      border-color: themed($m-borderColor--primary);
+      border: 1px solid themed($m-borderColor--primary);
+    }
+    &:hover {
+      @include m-theme() {
+        border: 1px solid themed($m-borderColor--tertiary);
+      }
     }
   }
 }
