--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
@@ -1,116 +1,192 @@
-m-wire--lock-screen {
-  display: block;
-  position: relative;
-}
-.m-wire--lock-screen {
+m-wire--lock-screen.m-wire--lock-screen-2020 {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  letter-spacing: 2px;
-  padding: 10px 10px 20px 10px;
-  background-image: url('<%= APP_CDN %>/assets/photos/andromeda-galaxy.jpg');
-  background-size: cover;
-  text-align: center;
-  position: relative;
-  @include m-theme() {
-    color: themed($m-white);
-  }
+  flex-flow: column nowrap;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 
-  > * {
-    z-index: 1;
-    cursor: default;
-  }
-
-  .ion-icon {
-    padding: 24px 0;
-    font-size: 75px;
-  }
-
-  .m-wire--lock-screen-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+  .m-wire--lock-screen {
+    display: flex;
+    justify-content: center;
     height: 100%;
+    width: 100%;
+    position: relative;
+
     z-index: 0;
+    cursor: pointer;
     @include m-theme() {
-      background-color: rgba(themed($m-black), 0.4);
+      color: themed($m-white);
     }
-  }
 
-  .m-wire--lock-screen-amount {
-    font-weight: 400;
-    margin: 0;
-    letter-spacing: 4px;
-  }
+    > * {
+      z-index: 1;
+    }
+    &.isTextOnly {
+      align-items: center;
 
-  .m-wire--lock-screen--message {
-    text-align: center;
-    text-transform: uppercase;
-    max-width: 60%;
-    font-weight: 400;
-    font-family: 'Roboto', Helvetica, sans-serif;
-    letter-spacing: 2px;
-    font-size: 11px;
-    line-height: 20px;
-  }
-}
-
-.m-wire--lock-screen--transaction-made-notice {
-  padding: 16px;
-  @include m-theme() {
-    color: themed($m-red);
-  }
-}
-
-.m-wire--lock-screen--button {
-  padding: 16px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-  .m-wire--lock-screen-introduction {
-    flex: 1;
-
-    & > p {
       @include m-theme() {
-        color: themed($m-grey-800) !important;
+        color: themed($m-textColor--secondary);
+        border-top: 1px solid themed($m-borderColor--tertiary);
+        background-color: themed($m-white);
+      }
+      .m-wire--lock-screen--message {
+        @include m-theme() {
+          text-shadow: 0 0 0 rgba(themed($m-black-always), 0);
+        }
+      }
+    }
+    &.isMedia {
+      .m-wire--lock-screen--message {
+        position: absolute;
+        transform: translateY(-50%);
       }
     }
   }
 
-  button {
-    display: inline-block;
-    vertical-align: middle;
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-
-    > * {
-      vertical-align: middle;
-      letter-spacing: 1.5px;
-    }
-
-    i {
-      padding-right: $minds-padding;
-    }
-
-    .m-spinner {
-      display: inline-block;
-      vertical-align: middle;
-      transform: scale(0.5);
+  .m-wire--lock-screen-overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    @include m-theme() {
+      background-color: rgba(themed($m-black-always), 0.4);
     }
   }
 
-  p {
-    padding: 8px 0;
-    display: inline-block;
-    margin-bottom: 0;
+  .m-wire--lock-screen--message {
+    margin: 0;
+    text-align: center;
+    max-width: 60%;
+    font-weight: 400;
+    font-size: inherit;
+    line-height: 20px;
+    z-index: 2;
+    @include m-theme() {
+      text-shadow: 0 0 2px rgba(themed($m-black-always), 0.6);
+    }
+  }
+}
+// ******************************************************
+// ** LEGACY
+// ******************************************************
+m-wire--lock-screen {
+  &:not(.m-wire--lock-screen-2020) {
+    display: block;
+    position: relative;
 
-    b {
-      font-size: 26px;
+    .m-wire--lock-screen {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      letter-spacing: 2px;
+      padding: 10px 10px 20px 10px;
+      background-image: url('<%= APP_CDN %>/assets/photos/andromeda-galaxy.jpg');
+      background-size: cover;
+      text-align: center;
+      position: relative;
       @include m-theme() {
-        color: themed($m-grey-400);
+        color: themed($m-white);
+      }
+
+      > * {
+        z-index: 1;
+        cursor: default;
+      }
+
+      .ion-icon {
+        padding: 24px 0;
+        font-size: 75px;
+      }
+
+      .m-wire--lock-screen-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        @include m-theme() {
+          background-color: rgba(themed($m-black), 0.4);
+        }
+      }
+
+      .m-wire--lock-screen-amount {
+        font-weight: 400;
+        margin: 0;
+        letter-spacing: 4px;
+      }
+
+      .m-wire--lock-screen--message {
+        text-align: center;
+        text-transform: uppercase;
+        max-width: 60%;
+        font-weight: 400;
+        font-family: 'Roboto', Helvetica, sans-serif;
+        letter-spacing: 2px;
+        font-size: 11px;
+        line-height: 20px;
+      }
+    }
+
+    .m-wire--lock-screen--transaction-made-notice {
+      padding: 16px;
+      @include m-theme() {
+        color: themed($m-red);
+      }
+    }
+
+    .m-wire--lock-screen--button {
+      padding: 16px;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      .m-wire--lock-screen-introduction {
+        flex: 1;
+
+        & > p {
+          @include m-theme() {
+            color: themed($m-grey-800) !important;
+          }
+        }
+      }
+
+      button {
+        display: inline-block;
+        vertical-align: middle;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+
+        > * {
+          vertical-align: middle;
+          letter-spacing: 1.5px;
+        }
+
+        i {
+          padding-right: $minds-padding;
+        }
+
+        .m-spinner {
+          display: inline-block;
+          vertical-align: middle;
+          transform: scale(0.5);
+        }
+      }
+
+      p {
+        padding: 8px 0;
+        display: inline-block;
+        margin-bottom: 0;
+
+        b {
+          font-size: 26px;
+          @include m-theme() {
+            color: themed($m-grey-400);
+          }
+        }
       }
     }
   }
